--- a/time.html
+++ b/time.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>自定义信息面板</title>
+  <title>大字体自定义时钟</title>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      width: 100vw;
+      min-height: 100vh;
+    }
     body {
+      min-height: 100vh;
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background: #fafafa;
       color: #222;
       margin: 0;
@@ -17,59 +32,89 @@
       color: #eaeaea !important;
     }
     #container {
-      max-width: 100vw;
-      margin: 0 auto;
+      width: 100vw;
+      height: 100vh;
+      /* Flexbox for perfect center */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 2vh 0;
-    }
-    #datetime {
-      margin-bottom: 2vh;
     }
     #time {
       display: block;
-      font-size: 8vw;
+      font-size: 18vw;
       font-weight: bold;
+      line-height: 1;
+      letter-spacing: 0.05em;
     }
     #date {
       display: block;
-      font-size: 4vw;
-      margin-top: 1vw;
+      font-size: 8vw;
+      margin-top: 3vw;
+      line-height: 1.8;
+      font-weight: normal;
     }
-    @media (max-width:500px) {
-      #time { font-size: 14vw; }
-      #date { font-size: 7vw; }
+    @media (max-width:600px) {
+      #time { font-size: 25vw; }
+      #date { font-size: 11vw; }
     }
   </style>
 </head>
 <body>
   <div id="container">
-    <div id="datetime">
-      <span id="time"></span>
-      <span id="date"></span>
-    </div>
+    <span id="time"></span>
+    <span id="date"></span>
   </div>
   <script>
-    function updateTime() {
+    function showNow() {
       const now = new Date();
-      document.getElementById('time').textContent = now.toLocaleTimeString('zh-CN', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
-      document.getElementById('date').textContent = now.toLocaleDateString('zh-CN', { year: 'numeric', month: 'long', day: 'numeric', weekday: 'long' });
+      // 格式化时间为两位数
+      function pad(n){return n<10?'0'+n:n;}
+      document.getElementById('time').textContent =
+        pad(now.getHours()) + ":" + pad(now.getMinutes()) + ":" + pad(now.getSeconds());
+      // 日期格式更美观
+      document.getElementById('date').textContent =
+        now.getFullYear() + "年" +
+        pad(now.getMonth()+1) + "月" +
+        pad(now.getDate()) + "日 " +
+        "星期" + "日一二三四五六".charAt(now.getDay());
     }
-    setInterval(updateTime, 500);
-    updateTime();
 
-    // 日落自动暗黑模式（无API，采用本地估算，适合中国大多数地区；支持定制！）
+    // 直接每秒钟刷新，但每5分钟整点强制使用系统时间
+    let systemSyncTimer = null, normalTimer = null;
+    function startClock() {
+      showNow();
+      clearInterval(normalTimer);
+      normalTimer = setInterval(showNow, 1000);
+      clearInterval(systemSyncTimer);
+      // 每五分钟强制重置为系统时间，通常js计时器会跑偏
+      systemSyncTimer = setInterval(() => {
+        showNow(); // 用系统时间重新赋值
+      }, 5 * 60 * 1000);
+    }
+
+    // 局部日落暗黑模式（本地估算：6点-18点为白天，其余时间夜晚）
     function autoDarkMode() {
       const now = new Date();
-      const hours = now.getHours();
-      // 估算日出6:00，日落18:00（可调整）
-      if (hours >= 18 || hours < 6) {
-        document.body.classList.add('dark-mode');
+      const hour = now.getHours();
+      if (hour >= 18 || hour < 6) {
+        document.body.classList.add("dark-mode");
       } else {
-        document.body.classList.remove('dark-mode');
+        document.body.classList.remove("dark-mode");
       }
     }
-    setInterval(autoDarkMode, 60 * 1000); // 每分钟判断一次
-    autoDarkMode();
+    function startDarkModeWatcher() {
+      autoDarkMode();
+      setInterval(autoDarkMode, 60 * 1000); // 每分钟重新判断
+    }
+
+    // 初始化
+    window.onload = function() {
+      startClock();
+      startDarkModeWatcher();
+      // 屏幕旋转/大小调整时，保持居中（Flex已支持）
+    };
   </script>
 </body>
 </html>
